--- a/src/app/shared/styles/elements/_html.scss
+++ b/src/app/shared/styles/elements/_html.scss
@@ -21,6 +21,7 @@ strong {
 
 p {
 	line-height: var(--font-2-line-height);
+	font-size: var(--text-sm);
 }
 
 ul {
