--- a/src/app/shared/styles/elements/_navigation.scss
+++ b/src/app/shared/styles/elements/_navigation.scss
@@ -1067,7 +1067,7 @@ body {
    */
 
   .hero {
-    --section-padding: 120px;
+    height: 100vh;
   }
 
   .hero .section-text {
